# suave_code_samples

./: .gitignore  README
C/: README
C++/: README
C++/C++17/demangler/: demangler.cpp
C++/C++17/safety_first/: safety_first.cpp
C++/backtrace/: backtrace-cpp-win64_pdb.txt  backtrace.cpp  make-unix.sh  make-win32.sh
C++/backtrace/traces/: backtrace-cpp-linux.txt
C/C11/socket_keepalive_server/: socket_keepalive_client.c  socket_keepalive_server.c
C/C11/socket_tcp_udp/: socket_tcp_client.c  socket_tcp_keepalive_server.c  socket_udp_broadcast_client.c  socket_udp_server.c
C/C11/socket_tcp_udp/openssl3/: socket_tcp_client_tls.c  socket_tcp_keepalive_server_tls.c  socket_tcp_tls-generate.sh  socket_tcp_tls.cnf
C/C11/stack_init/: stack_init.c
C/C11/unicode_japanese/: unicode_japanese.c  片恋いの月 詰め合わせ.txt
C/C11/variant_list/: variant_list.c
C/C11/variant_list/lib/: _threads.h  _threads_posix.h  libvariant_list.c  make-unix.sh  make-win32.sh  variant_list.c  variant_list.h
C/C23/c_analyzer/: Makefile  README  c_analyzer.c
C/C23/c_analyzer/plugins/: plugin.h  sample.c
C/C23/empty_initializer/: empty_initializer.c
C/C23/memset_explicit/: README  memset_explicit.c  memset_explicit.h
C/C23/variant_list/: variant_list.c
C/C23/variant_list/lib/: libvariant_list.c  make-clean.sh  make-unix.sh  make-win32.sh  variant_list.c  variant_list.h
C/alignment_arm_crash/: alignment_arm_crash.c
C/backtrace/: backtrace-win64_pdb.txt  backtrace.c  backtrace.txt  make-unix.sh  make-win32.sh
C/backtrace/traces/: backtrace-win64.txt
C/gui_toolkits/Motif/: Xresources  motif-editor.c
C/gui_toolkits/Motif/icons/: icon_open.xbm  icon_save.xbm
C/linux/: landlock.c
C/non-blocking_io/: non-blocking_io.c
C/opengl-vulkan/1-cross/: sdl3-gl1.c  sdl3-gl2.c  sdl3-gl2_shaders.c  sdl3-gl2_vbos.c  sdl3-gles2.c  sdl3-gles2_vbos.c  sdl3-gles3.c  sdl3-gles32.c  sdl3-gles3_vbos.c  sdl3-vulkan.c
C/wayland/: Makefile  README  README.md  wayland-01-list_interfaces.c  wayland-02-list_interfaces-opengl_vulkan.c  wayland-02-list_interfaces_opengl-vulkan.c  wayland-03-shm_software_rendering.c  wayland-04-shm_software_rendering-redraw.c  wayland-05-accelerated_rendering-opengl.c  wayland-05-input.c  wayland-06-accelerated_rendering-vulkan.c  wayland-06-input_shell.c  wayland-07-drag_and_drop.c  wayland-07-input.c  wayland-08-input_shell.c  wayland-08bis-input_shell-libdecor.c  wayland-09-drag_and_drop.c
Rust/linux/landlock/: Cargo.toml
Rust/linux/landlock/src/: main.rs
Rust/no-std/: Cargo.toml
Rust/no-stdlib/: Cargo.toml
Rust/no-stdlib/src/: main.rs
Rust/non-blocking_io/: Cargo.toml
Rust/non-blocking_io/src/: main.rs
Rust/wayland/: Cargo.toml
Rust/wayland/src/: main.rs
