[package]
name = "non-blocking_io"
version = "0.1.0"
authors = ["Manuel Bachmann <tarnyko@tarnyko.net>"]
edition = "2018"
description = "A standalone executable that does not block while taking input"
repository = "https://github.com/Tarnyko/suave_code_samples"
homepage = "https://github.com/Tarnyko/suave_code_samples/tree/master/Rust/non-blocking_io"
license = "GPL-3.0-or-later"

[dependencies]
getch-rs = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase","processenv","wincon","consoleapi"] }
