#  Run with:
# cargo run --bin wayland-01-list_interfaces
# cargo run --bin wayland-02-list_interfaces-opengl_vulkan
# cargo run --bin wayland-02-list_interfaces-opengl_vulkan --no-default-features
# cargo run --bin wayland-03-shm_software_rendering
# cargo run --bin wayland-04-shm_software_rendering-redraw
# ...
# cargo run --bin wayland-08bis-input_shell-libdecor --features libdecor

[package]
name = "wayland-samples"
version = "0.1.0"
authors = ["Manuel Bachmann <tarnyko@tarnyko.net>"]
edition = "2021"
rust-version = "1.65"
description = "Wayland API samples"
repository = "https://github.com/Tarnyko/suave_code_samples"
homepage = "https://github.com/Tarnyko/suave_code_samples/tree/master/Rust/wayland"
license = "GPL-3.0-or-later"

[dependencies]
wayland-client = { version = "0.31.0" }
wayland-protocols = { version = "0.32.0" , features = ["client"] }
wayland-egl = { version = "0.32.0" }
nix = { version = "0.27", features = ["mman", "fs"] }
memmap2 = { version = "0.9" }
egli = { version = "0.5" }
gl = { version = "0.14" }

[features]
default = ["vulkan"]
vulkan = []
libdecor = []

#[[bin]]
#name = "wayland-08bis-input_shell-libdecor"
#path = "src/bin/wayland-08bis-input_shell-libdecor.rs"
#required-features = ["libdecor"]
